[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Bola/SS_Bola1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fundos/GOLDEN/SS_Bola_GOLDEN1.png" type="Texture" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/FX/collision/Ball - Car.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/FX/collision/Ball - Wall.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_BLUE1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_RED4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_RED3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_BLUE2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_BLUE4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_RED1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_RED2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bola/Bola_Raios/SS_Bola_Raio_BLUE3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sounds/FX/collision/Ball - Goal Post.wav" type="AudioStream" id=14]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
rough = true
bounce = 0.49

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Gold",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "Blue",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "Red",
"speed": 12.0
} ]

[node name="Ball" type="RigidBody2D"]
collision_layer = 4
collision_mask = 187
mass = 0.01
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
applied_torque = 5.0
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "Default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ball_Wall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 15.0

[node name="Ball_Ship" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="Ball_Post" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 10.0

[node name="Electric" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
animation = "Blue"

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="animation_finished" from="Electric" to="." method="_on_Electric_animation_finished"]
